--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "name": "test-angular",
   "version": "0.0.0",
   "scripts": {
+    "heroku-postbuild":"ng build --prod",
     "ng": "ng",
-    "start": "node server.js", 
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "lite": "lite-server",
-    "postinstall": "ng build --prod"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "-": "0.0.1",
+    "@angular/cli": "~10.1.3",
+    "@angular/compiler-cli": "~10.1.3",
     "@angular/animations": "~10.1.3",
     "@angular/common": "~10.1.3",
     "@angular/compiler": "~10.1.3",
@@ -22,12 +22,10 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
-    "express": "^4.17.1",
-    "path": "^0.12.7",
     "rxjs": "~6.6.0",
-    "save": "^2.4.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "typescript": "~4.0.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.3",
@@ -48,8 +46,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
-  },"engines": {
-    "node": "10.14.2",
-      "npm": "6.4.1"
+  },
+  "engines": {
+    "node": "12.18.4",
+      "npm": "6.14.8"
   }
 }
