--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~10.1.3",
-    "@angular/compiler-cli": "~10.1.3",
+    "@angular/cli": "^10.1.3",
+    "@angular/compiler-cli": "^10.1.3",
     "@angular/animations": "~10.1.3",
     "@angular/common": "~10.1.3",
     "@angular/compiler": "~10.1.3",
@@ -29,8 +29,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.3",
-    "@angular/cli": "~10.1.3",
-    "@angular/compiler-cli": "~10.1.3",
+    "@angular/cli": "^10.1.3",
+    "@angular/compiler-cli": "^10.1.3",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
